--- a/weightable_practice_scaffolding/app/views/users/_form.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_form.html.erb
@@ -31,7 +31,8 @@
 
     <div class="collapse in" id="goal-date">
       <%= f.label :goal_date %><br>
-      <%= f.text_field :goal_date, :id=>"datepicker" %><br /><br>
+      <%= f.text_field :goal_date, :id=>"datepicker" %>
+      <br /><br>
     </div>
 
     <%= f.label :profile_pic %><br>
