--- a/weightable_practice_scaffolding/app/views/users/edit.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/edit.html.erb
@@ -8,7 +8,8 @@
 <script type="text/javascript">
 
 $(function() {
-  $( "#datepicker" ).datepicker();
+  $( "#datepicker" ).datepicker({dateFormat: 'yy-mm-dd'});
+  
   $("#goal-btn").tooltip();
   $(".collapse").collapse();
 
