--- a/weightable_practice_scaffolding/app/views/users/_form_edit_weigh_in.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_form_edit_weigh_in.html.erb
@@ -1,15 +1,15 @@
 <div class="row">
-  <div class="col-xs-10">
+  <div class="col-xs-10 col-sm-11 col-md-8 col-lg-8">
     <div class="panel-group" id="accordion-wi">
-      <div class="-wi-btn" data-toggle="collapse" data-parent="#accordion-wi" href="#-wi">
+      <div class="wi-btn" data-toggle="collapse" data-parent="#accordion-wi" href="#wi">
         <div class="panel-heading">
           <strong><p>Update Today's Weigh-in</p></strong>
         </div>
       </div>
     </div>
 
-    <div id="-wi" class="panel-collapse collapse">
-      <div class="-wi-panel panel-body">      
+    <div id="wi" class="panel-collapse collapse">
+      <div class="wi-panel panel-body">      
         <%= form_for [@user, @weigh_in] do |f| %>
           <div class="row">
             <div class="col-xs-12">
@@ -21,12 +21,12 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-2">
+            <div class="col-xs-3">
             </div>
             <div class="col-xs-6">
               <%= f.submit "Weigh In!", :class=>"btn btn-info btn-center"  %>
             </div>
-            <div class="col-xs-2">
+            <div class="col-xs-3">
           </div>
         <% end %>
       </div>
