--- a/weightable_practice_scaffolding/app/views/users/friends.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/friends.html.erb
@@ -1,12 +1,50 @@
 <h1 class="friends_header"><%= @user.friendships.count %> friends</h1>
 
-<div class="friend_card col-md-3">
-  <img class="friend_page_pic clearfix" src=<%= @user.profile_pic_url(:sq_medium) %>
-</div>
+<% if current_user %> 
+  <% @user.friendships.each do |friendship| %>
 
+    <!-- Creates bootstrap column -->
+    <div class="friend_card col-md-3">
+
+      <!-- Generates friend's profile image -->
+      <img class="friend_page_pic" src=<%= friendship.friend.profile_pic_url %> />
+    
+      <!-- Creates link to friend's show page and capitalizes each letter in multiple names -->
+      <h1 class="friend_name"><%= link_to "#{friendship.friend.name.split.map(&:capitalize).join(' ')}", user_path(friendship.friend.id) %></h1>
+
+      <!-- Shows friend's goal weight -->
+      <p class="friend_goal_info">goal <strong><%= friendship.friend.goal %> lbs</strong></p>
+
+      <!-- Shows number of friend's friends -->
+      <p class="friend_profile_info"><%= friendship.friend.friendships.count %> friends | <%= friendship.friend.weigh_ins.count %> weigh-ins </p>
+      
+      <!-- Shows number of friend's weigh ins -->
+
+      <!-- Shows progress toward friend's weigh loss goal -->
+      
+<!--         <div class="prog-bar-base"></div>
+          <div class="prog-bar-overlay" style="width:<%= @progress %>%"></div>
+            </div>
+              <div class="goal-date-con">
+                <h4 class="no-horiz-pad inline-text text-muted"><strong><%= @user.goal %></strong> <small>lbs</small></h4>
+                    <% if current_user.goal_date %>
+                      <p class='text-muted'><%= @user.goal_date.to_formatted_s(:short) %></p>
+                    <% end %>
+                  <p id="progress-label"><strong><%=@progress%>%</strong> to goal! </p>
+                </div>  
+              </div>  
+            </div>
+          </div>-->
+          <!-- Closes bootstrap column -->
+        </div> 
+  <% end %>
+<% end %>
+
+<!-- End of row 1 -->
+<div class="row">
 
 <%= link_to(all_users_path) do %>
-  <div class="add_more_friends">Find More Friends</div>
+  <span class="add_more_friends">Find More Friends</div>
 <% end %>
 
 
