--- a/weightable_practice_scaffolding/app/views/users/friends.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/friends.html.erb
@@ -26,7 +26,7 @@
 
 <!-- THIS THROWS ERROR, NEED TO CORRECT -->
 
-            <p class="friend_progress_text"><strong><%= ((friendship.friend.weigh_ins.last).to_f/((friendship.friend.goal).to_f) * 100 - 100).round(2) %>%</strong> to goal!</p>  
+            <p class="friend_progress_text"><strong>5%</strong> to goal!</p>  
             <div class="friend_progress_bar_white_bar"></div>
 
             <!-- <div class="prog-bar-overlay" style="width:<%= @progress %>%"></div>
