--- a/weightable_practice_scaffolding/app/views/users/_form_create_weigh_in.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_form_create_weigh_in.html.erb
@@ -17,7 +17,7 @@
              <%= f.text_field :weight, :class=>"form-control", :placeholder=>"Weight", :required=>true %><br />
 
              <%= f.label :status, :class=>"sr-only" %>
-             <%= f.text_field :status, :class=>"form-control", :placeholder=>"Status" %><br />
+             <%= f.text_field :status, :class=>"form-control", :placeholder=>"Status", :required=>true %><br />
            </div>
          </div>
          <div class="row">
