--- a/weightable_practice_scaffolding/app/views/users/_show_wi_feed.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_show_wi_feed.html.erb
@@ -11,20 +11,29 @@
     <div class="row">
       <div class="col-sm-3">
         <% if @user.weigh_ins.count < 2 %>
-          <div class="feed-circle-base1 hidden-xs"></div>
-          <div class="feed-circle-base2 hidden-xs"></div>
-          <div class="feed-circle-base3 hidden-xs"></div>
-          <div class="feed-timeline extra hidden-xs"></div>
-        <% elsif @user.weigh_ins.count < 3 %>
-          <div class="feed-circle-base2 hidden-xs"></div>
-          <div class="feed-circle-base3 hidden-xs"></div>
-        <% elsif @user.weigh_ins.count == 3 %>
-          <div class="feed-circle-base3 hidden-xs"></div>
-        <% end %>
+          <div class="feed-circle-base-1 hidden-xs"></div>
+          <div class="feed-circle-base-2 hidden-xs"></div>
+          <div class="feed-circle-base-3 hidden-xs"></div>
         <div class="feed-circle hidden-xs"></div>
         <div class="feed-timeline-caboose-<%= counter %> hidden-xs"></div>
+        <% elsif @user.weigh_ins.count < 3 && weight != @user.weigh_ins.first %>
+          <div class="feed-circle-base-1 hidden-xs"></div>
+          <div class="feed-circle-base-3 hidden-xs"></div>
+          <div class="feed-circle hidden-xs"></div>
+           <div class="feed-timeline-caboose-1 hidden-xs"></div>
+           <div class="feed-timeline-caboose-2 hidden-xs"></div>
+        <% elsif @user.weigh_ins.count == 3 && @user.weigh_ins.first(2).exclude?(weight) %>
+          <div class="feed-circle-base-3 hidden-xs"></div>
+        <div class="feed-circle hidden-xs"></div>
+        <div class="feed-timeline-caboose-2 hidden-xs"></div>
+        <div class="feed-timeline-caboose-3 flip hidden-xs"></div>
+        <% else %>
+         <div class="feed-circle hidden-xs"></div>
+         <% if counter > 0 %>
+          <div class="feed-timeline-caboose-<%= counter %> hidden-xs"></div>
+         <% end %>
+        <% end %>
 
-see if you can specify that rails do something on the last iteration
 
       </div>
       <div class="col-sm-9">
