Add bar chart and stylize dashboard on user show page

--- a/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -49,7 +49,10 @@ section {
 canvas#myChart {
   display: block;
   padding: 20px;
-}
+  width: 100% !important;
+  max-width: 800px;
+  height: auto !important;
+  }
 
 .profile-pic {
   margin-left: 0;
