--- a/weightable_practice_scaffolding/app/views/users/_show_wi_feed.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_show_wi_feed.html.erb
@@ -1,10 +1,7 @@
 <div class="">
-  <h1 class="your-weigh-ins">Your Weigh-Ins</h1>
+  <h1 class="your-weigh-ins">your weigh-ins</h1>
   <% counter = 0 %>
   <% @user.weigh_ins.first(4).each do |weight| %>
-    <% @weights.unshift(weight.weight) %>
-    <% @goal.unshift(@user.goal) %>
-    <% @dates.unshift((weight.created_at).strftime("%a")) %>
 
   <!-- Weigh-in stats -->
 
