Stylize green data

--- a/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -54,6 +54,13 @@ canvas#myChart {
   height: auto !important;
   }
 
+canvas#dashboardChart {
+  display: block;
+  width: 100% !important;
+  max-width: 350px;
+  height: auto !important;
+}
+
 .profile-pic {
   margin-left: 0;
 }
