--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -201,6 +201,31 @@ h3 {
   color: white;
 }
 
+.green-box-headers {
+  font-family: "Open Sans";
+  font-weight: light;
+  text-align: center;
+}
+
+.record-weight {
+  font-size: .5em;
+  font-weight: 100;
+}
+
+.record-weight-trophy {
+  font-size: .8em;
+  display: block;
+  opacity: .6;
+}
+
+.dashboard-data-container {
+  text-align: center
+}
+
+.dashboard-data {
+  font-weight: 400;
+  font-size: 30px;
+}
 /* Right content */
 
 /* Weigh-in speech bubble*/
