Work on @on_track_icon logic for if a user is on track to meet their goal or not for user show page

--- a/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss.erb
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss.erb
@@ -150,6 +150,12 @@ div {
   }
 }
 
+<% if @on_track_icon %> 
+@media(min-width:912px){
+  .goal-projection span:after { content: <%= @on_track_icon %> }
+}
+<% end %>
+
 @media(min-width:912px){
 
   ul.nav.navbar-nav a{
