--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -86,7 +86,7 @@
             <div class="col-xs-6">
               <h4 class="green-box-headers">GOAL PROJECTION</h4>
               <div class="dashboard-data-container">
-                <span class="dashboard-data">ON TRACK</span>
+                <span class="dashboard-data goal-projection">ON&nbsp;TRACK</span>
                 <div class="data-subheader">finish estimate:</div>
               </div>
             </div>
