I believe I've resolved all the conflicts and have now fixed the CSS error

--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -192,7 +192,7 @@ h3 {
   height: auto;
 }
  
-canvas{
+canvas {
     width: 100% !important;
     max-width: 600px;
     height: auto !important;
@@ -359,15 +359,15 @@ h1.your-weigh-ins {
   padding-left: 20%;
 }
 
-<<<<<<< HEAD
+
 @media(max-width: 991px){
   h1.your-weigh-ins {
   font-size: 2.4em;
+  }
 }
-=======
+
 h1.stats-header {
   text-align: center;
->>>>>>> goal_projection
 }
 
 .feed-timeline {
